<resources>
    <string name="app_name">Maxwell Sport</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log In</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toolbar_about_title">About</string>
    <string name="toolbar_exercise_details_title">Exercise Details</string>
    <string name="toolbar_exercise_title">Exercises</string>
    <string name="toolbar_exercise_group_title">Atlas</string>
    <string name="toolbar_cardio_title">Cardio</string>
    <string name="toolbar_cardio_summary_title">Run Summary</string>
    <string name="toolbar_profile_title">Profile</string>
    <string name="toolbar_settings_title">Settings</string>
    <string name="toolbar_settings_language_title">Language</string>
    <string name="toolbar_settings_tab_title">Default Tab</string>
    <string name="toolbar_settings_theme_title">Theme</string>
    <string name="toolbar_training_day_title">Training Day</string>
    <string name="toolbar_training_title">Training</string>
    <string name="toolbar_training_summary_title">Training Summary</string>
    <string name="default_timer_value">00:00</string>
    <string name="default_distance_value">0.00</string>
    <string name="default_zero_value">0</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_training">Training</string>
    <string name="nav_cardio">Cardio</string>
    <string name="nav_atlas">Atlas</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_about">About</string>
    <string name="profile_user_name">Maxwell Sport</string>
    <string name="profile_user_email">maxwellsport@gmail.com</string>
    <string name="profile_active_since">Active since: 00.00.0000</string>
    <string name="profile_statistics">Statistics:</string>
    <string name="profile_training_form">Training form:</string>
    <string name="profile_running_form">Running form:</string>
    <string name="profile_last_training_date">Last training date:</string>
    <string name="profile_last_training_date_value">-</string>
    <string name="profile_last_training_duration">Last training duration:</string>
    <string name="profile_average_training_duration">Average training duration:</string>
    <string name="profile_longest_training_duration">Longest training duration:</string>
    <string name="profile_last_exercise_amount">Last exercise amount:</string>
    <string name="profile_average_exercise_amount">Average exercise amount:</string>
    <string name="profile_biggest_exercise_amount">Biggest exercise amount:</string>
    <string name="profile_last_run_date">Last run date:</string>
    <string name="profile_last_run_date_value">-</string>
    <string name="profile_last_run_duration">Last run duration:</string>
    <string name="profile_average_run_duration">Average run duration:</string>
    <string name="profile_longest_run_duration">Longest run duration:</string>
    <string name="profile_last_run_distance">Last run distance:</string>
    <string name="profile_average_run_distance">Average run distance:</string>
    <string name="profile_longest_run_distance">Longest run distance:</string>
    <string name="profile_last_run_pace">Last run pace:</string>
    <string name="profile_average_run_pace">Average run pace:</string>
    <string name="profile_biggest_run_pace">Best run pace:</string>
    <string name="training_title">Training 1</string>
    <string name="training_information_label">Details</string>
    <string name="training_exercise_group">Muscle groups:</string>
    <string name="training_exercise_group_value">Chest \n Shoulders \n Back</string>
    <string name="training_exercise_amount">Exercise amount:</string>
    <string name="training_weight">Weight:</string>
    <string name="training_sets">Sets:</string>
    <string name="training_reps">Reps:</string>
    <string name="training_completed">COMPLETED</string>
    <string name="training_not_completed">NOT COMPLETED</string>
    <string name="training_popup_description">Description</string>
    <string name="training_timer">Time [min]</string>
    <string name="training_summary_title">Training summary</string>
    <string name="training_summary_time">Time spent training:</string>
    <string name="training_summary_exercise_amount">Completed exercises:</string>
    <string name="training_summary_rate_title">Rate your performance</string>
    <string name="cardio_timer">"Time [min]"</string>
    <string name="cardio_distance">"Distance [km]"</string>
    <string name="cardio_pace">"Pace [min/km]"</string>
    <string name="cardio_summary_title">Run summary</string>
    <string name="cardio_summary_time">Time spent running:</string>
    <string name="cardio_summary_distance">Distance traveled:</string>
    <string name="cardio_summary_pace">Average pace:</string>
    <string name="cardio_summary_rate">Rate your performance</string>
    <string name="atlas_exercise_group_name">Exercise group name</string>
    <string name="atlas_exercise_name">Exercise name</string>
    <string name="atlas_exercise_description">Description:</string>
    <string name="atlas_exercise_description_content">Bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</string>
    <string name="atlas_exercise_difficulty">Difficulty:</string>
    <string name="atlas_exercise_difficulty_name">Medium</string>
    <string name="exercise_group_1_name">Biceps</string>
    <string name="exercise_group_2_name">Triceps</string>
    <string name="exercise_group_3_name">Shoulders</string>
    <string name="exercise_group_4_name">Chest</string>
    <string name="exercise_group_5_name">Back</string>
    <string name="exercise_group_6_name">Legs</string>
    <string name="exercise_group_7_name">Abs</string>
    <string name="exc_biceps_1_name">Alternation bending elbows with dumbbells with rotation of wrist and elbows elevation</string>
    <string name="exc_biceps_2_name">Alternation bending elbows with dumbbells (elbow propped on thigh)</string>
    <string name="exc_biceps_3_name">Alternation bending elbows with dumbbells hold neutrally</string>
    <string name="exc_biceps_4_name">Alternate flexing forearms using cable row</string>
    <string name="exc_biceps_5_name">Reverse grip lat pull down</string>
    <string name="exc_biceps_6_name">Bending elbows with barbell held with wide-grip</string>
    <string name="exc_biceps_1_description">In sitting position, dumbbells is held with wide-grip, forearms in average setting:\n- take breath and bend forearm, making the half-turn of the wrist on the outside before forearm finds itself in horizontal position;\n- complete movement with lifting elbows and exhale.\nThis exercise involves brachioradialis, brachialis muscle, biceps, front part of deltoid.</string>
    <string name="exc_biceps_2_description">In sitting position, elbow propped on inside part of thigh:\n- take breath and bend forearm;\n- exhale in the final phase of movement.\nThis isolated exercise allows to control range, speed and accuracy of movement. It involves mainly biceps and brachialis muscle.</string>
    <string name="exc_biceps_3_description">In standing or sitting position, dumbbells are held by both hands with wide-grip, forearm in middle position:\n- take breath and bend both forearms simultaneously or alternately;\n- exhale in final phase of movement.\nThis exercise develops best brachioradialis. It affects also on biceps and brachialis muscle.</string>
    <string name="exc_biceps_4_description">In standing position, face forward, cable row hand is held with wide-grip:\n- take breath and bend forearm;\n- exhale in final phase of movement.\nThis exercise allows to concentrate effort within biceps and promotes intense muscle blood supply.</string>
    <string name="exc_biceps_5_description">In standing position, standing centrally to lift, arm outstretched, lift hands are held with reverse grip:\n- take breath and bend forearms;\n- exhale in final phase of movement.\nThis exercise which often ends workout arms muscles allows to develop biceps, mainly its pre-streached short head and biased in position of spread shoulders; it also develops brachialis.\nThis exercise cannot be perform with heavy load. It\'s important to focus on the feeling of contraction of internal part of biceps.</string>
    <string name="exc_biceps_6_description">In standing position, back straight, barbell is held with wide-grip (hands apart on width slightly greater than the distance between shoulders):\n- take breath and then bend forearms trying not to move your chest by performing isometrical contraction of glutes, abdominal and paraspinal muscles;\n- exhale in final phase of movement.\nThis exercise involves mainly biceps and brachialis muscle.</string>
    <string name="exc_triceps_1_name">Exercise for triceps brachii muscle with use of lat pull down (hand of cable row is held with wide-grip)</string>
    <string name="exc_triceps_2_name">Exercise for triceps brachii muscle with use of lat pull down (hand of cable row is held with reverse grip)</string>
    <string name="exc_triceps_3_name">Alternate straightening forearms with use of lat pull down</string>
    <string name="exc_triceps_4_name">Straighten elbows with barbells in the lying position on bench</string>
    <string name="exc_triceps_5_name">Straighten elbows with dumbbells in lying position</string>
    <string name="exc_triceps_6_name">Flexing forearms to support back on benches</string>
    <string name="exc_triceps_1_description">In standing position, hands on lat pull down holder, elbows along trunk:\n- take breath and straight forearms trying not to tear elbows from trunk;\n- exhale in final phase of exercise.</string>
    <string name="exc_triceps_2_description">In standing position, facing the machine, arms at sides, bent at elbows, hands on the handles:\n- take breath and straighten forearms trying no to separate elbows from your body;\n- exhale in final phase of movement.\nReverse grip prevents training with heavy load that\'s why this exercise can only be done with small load in order to develop triceps brachii muscle and concentrate effort on head of this muscle.</string>
    <string name="exc_triceps_3_description">In standing position facing the machine, hand of lift is held with wide-grip:\n- take breath and straighten forearm;\n- exhale.\nThis exercise involves triceps brachii muscle, mainly its side head.</string>
    <string name="exc_triceps_4_description">In the lying position on bench, barbell is held with wide-grip, arms arranged vertically in relation to the bench:\n- take breath and bent arms trying not to dissuade too in back elbows while lowering the barbell at the height of forehead;\n- exhale in the final phase of movement.</string>
    <string name="exc_triceps_5_description">Lying on the ground, dumbbells is held in both hands, arms vertically to the ground:\n- take breath and bent arms controlling movement;\n- return to start position and exhale in final phase of movement.\nThis exercise is evenly involving all three heads of the triceps brachii muscle.</string>
    <string name="about_description">Great, smart and versatile training application made for the best and the strongest people walking on Earth</string>
    <string name="about_follow">Follow us on GitHub</string>
    <string name="about_copyright">© RafPep Inc. 2016 All rights reserved</string>
</resources>