<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:checked="true"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/ic_fitness_center_white_24dp"
            android:title="@string/nav_training" />
        <item
            android:id="@+id/nav_cardio"
            android:icon="@drawable/ic_directions_run_white_24dp"
            android:title="@string/nav_cardio" />
        <item
            android:id="@+id/nav_atlas"
            android:icon="@drawable/ic_library_books_white_24dp"
            android:title="@string/nav_atlas" />
    </group>

    <group
        android:id="@+id/nav_group_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_input_white_24dp"
            android:title="@string/nav_logout" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_white_24dp"
            android:title="@string/nav_about" />
    </group>
</menu>
