<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/atlas_exercise_details_icon"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/material_white"
            android:padding="16dp"
            android:src="@drawable/maxwell" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/atlas_exercise_details_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/atlas_exercise_name"
                android:textColor="?attr/colorAccent"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="?attr/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/atlas_exercise_description"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/atlas_exercise_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/atlas_exercise_description_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="?attr/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/atlas_exercise_difficulty"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/atlas_exercise_details_difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_star" />
            </LinearLayout>

            <TextView
                android:id="@+id/atlas_exercise_details_difficulty_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/atlas_exercise_difficulty_name"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>