<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="8dp">

    <FrameLayout
        android:id="@+id/training_flip_item_layout"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginRight="8dp">

        <ImageView
            android:id="@+id/training_flip_front"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/material_white"
            android:padding="4dp"
            android:src="@drawable/exc_biceps_1" />

        <ImageView
            android:id="@+id/training_flip_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:src="@drawable/ic_done"
            android:visibility="gone" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/frame_exercise" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/training_list_item_exercise_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="8dp"
                android:text="@string/exercise_name"
                android:textColor="@color/textColorPrimary"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/training_list_item_popup"
                android:layout_width="30dp"
                android:layout_height="55dp"
                android:src="@drawable/ic_more"
                android:tint="@color/textColorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training_weight"
                android:textColor="@color/textColorSecondary"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/training_list_item_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/default_zero_value"
                android:textColor="@color/textColorSecondary"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training_sets"
                android:textColor="@color/textColorSecondary"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/training_list_item_sets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/default_zero_value"
                android:textColor="@color/textColorSecondary"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training_reps"
                android:textColor="@color/textColorSecondary"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/training_list_item_reps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/default_zero_value"
                android:textColor="@color/textColorSecondary"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>